# decode_txt_strings

./: CMakeLists.txt  README.md  ai_magic.cpp  main.cpp  opencv_md.cpp  opencv_motion_detect.cpp  stringstream.cpp  write_data_ref.cpp
